# Robot-Parameter-Indentification-Simulation

./: .gitignore  CMakeLists.txt  README.md  plan.md
config/: experiment.yaml  force_controller_node.yaml  identification.yaml  panda_sim_node.yaml  piper_force_controller_node.yaml  piper_real_experiment.yaml
doc/: BIRDy_working_mode.md  Identification_Debugging_Report.md  Identification_Trajectory_Generation.md  Model_Mismatch_Issues.md  Trajectory_Safety_Mechanism.md  algorithm_evaluation.md  dynamics_calculation.md  franka_mujoco_torque_dynamics.md  parameter_identification.md  robot_parameter_identification_manual.md
franka_emika_panda/: README.md  panda.xml
piper/: README.md  piper.xml  piper_nohand.xml  scene.xml
results/: identification.yaml
src/app/: experiment_backend.hpp  experiment_recorder.cpp  experiment_recorder.hpp  piper_backend_bridge.py  piper_hardware_backend.cpp  piper_hardware_backend.hpp  run_experiment.cpp  run_real_experiment.py  simulation_backend.cpp  simulation_backend.hpp
src/force_node/: CMakeLists.txt  package.xml
src/force_node/include/force_node/: force_controller.hpp  force_controller_node.hpp
src/force_node/include/robot/: franka_panda.hpp  mujoco_collision_checker.hpp  regressor.hpp  robot_kinematics.hpp
src/force_node/include/trajectory/: fourier_trajectory.hpp  trajectory_generator.hpp  trajectory_optimizer.hpp
src/force_node/launch/: force_controller_node.launch.py
src/force_node/src/: force_controller.cpp  force_controller_node.cpp
src/force_node/src/robot/: regressor.cpp  robot_dynamics.cpp  robot_kinematics.cpp
src/force_node/src/trajectory/: fourier_trajectory.cpp  trajectory_generator.cpp  trajectory_optimizer.cpp
src/identification/: CMakeLists.txt  package.xml
src/identification/include/: mujoco_panda_dynamics.hpp  mujoco_piper_dynamics.hpp  mujoco_piper_regressor.hpp  mujoco_regressor.hpp
src/identification/include/identification/: algorithms.hpp  data_loader.hpp  identification.hpp  optimizer.hpp
src/identification/include/robot/: regressor.hpp  robot_dynamics.hpp  robot_kinematics.hpp  robot_model.hpp
src/identification/launch/: identification.launch.py
src/identification/src/: algorithms.cpp  data_loader.cpp  dynamics_diagnostic.cpp  identification.cpp  main.cpp  model_comparison.cpp  mujoco_identify.cpp  regressor_test.cpp
src/identification/src/robot/: franka_panda.cpp  mujoco_panda_dynamics.cpp  mujoco_piper_dynamics.cpp  mujoco_piper_regressor.cpp  mujoco_regressor.cpp  regressor.cpp  robot_dynamics.cpp  robot_kinematics.cpp
src/launch/: panda_sim_with_controller.launch.py
src/piper_real/: __init__.py  bridge.py  config.py  recorder.py  runner.py  sdk_adapter.py  trajectory.py
src/sim_com_node/: CMakeLists.txt  package.xml
src/sim_com_node/include/sim_com_node/: panda_sim_node.hpp  panda_simulator.hpp
src/sim_com_node/launch/: panda_sim_node.launch.py
src/sim_com_node/src/: panda_simulator.cpp  sim_com_node.cpp
tests/piper_real/: test_bridge.py  test_real_experiment.py
