<?xml version="1.0"?>
<package format="3">
  <name>sim_com_node</name>
  <version>0.0.1</version>
  <description>MuJoCo-based Franka Panda simulator node publishing joint states.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>glfw3</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_components</build_export_depend>
  <build_export_depend>ament_index_cpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>glfw3</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>glfw3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/share/${PROJECT_NAME}/panda_sim_node_component_plugins.xml"/>
  </export>
</package>
